examples/test/testpolicy8623.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8623
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key41: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value19
      podSelector:
        matchLabels:
          key41: value38
          key39: value0
          key40: value13
